syntax="proto2";
option cc_generic_services = true;

package peleus_demo.no_inter_service.syn;

message NoInterServiceRequest {
    required string message = 1;
};

message NoInterServiceResponse {
    required string message = 1;
};

service NoInterServiceService {
    rpc query(NoInterServiceRequest) returns (NoInterServiceResponse);
};
